; ModuleID = '/home/carl/AnghaBench/freebsd/stand/ficl/extr_vm.c_vmGetString.c'
source_filename = "/home/carl/AnghaBench/freebsd/stand/ficl/extr_vm.c_vmGetString.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i64 }

@FICL_STRING_MAX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @vmGetString(i32* %0, %struct.TYPE_3__* %1, i8 signext %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i8, align 1
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %5, align 8
  store i8 %2, i8* %6, align 1
  %8 = load i32*, i32** %4, align 8
  %9 = load i8, i8* %6, align 1
  %10 = call i32 @vmParseStringEx(i32* %8, i8 signext %9, i32 0)
  store i32 %10, i32* %7, align 4
  %11 = load i32, i32* %7, align 4
  %12 = call i32 @SI_COUNT(i32 %11)
  %13 = load i32, i32* @FICL_STRING_MAX, align 4
  %14 = icmp sgt i32 %12, %13
  br i1 %14, label %15, label %19

15:                                               ; preds = %3
  %16 = load i32, i32* %7, align 4
  %17 = load i32, i32* @FICL_STRING_MAX, align 4
  %18 = call i32 @SI_SETLEN(i32 %16, i32 %17)
  br label %19

19:                                               ; preds = %15, %3
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  %22 = load i8*, i8** %21, align 8
  %23 = load i32, i32* %7, align 4
  %24 = call i32 @SI_PTR(i32 %23)
  %25 = load i32, i32* %7, align 4
  %26 = call i32 @SI_COUNT(i32 %25)
  %27 = call i32 @strncpy(i8* %22, i32 %24, i32 %26)
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 0
  %30 = load i8*, i8** %29, align 8
  %31 = load i32, i32* %7, align 4
  %32 = call i32 @SI_COUNT(i32 %31)
  %33 = sext i32 %32 to i64
  %34 = getelementptr inbounds i8, i8* %30, i64 %33
  store i8 0, i8* %34, align 1
  %35 = load i32, i32* %7, align 4
  %36 = call i32 @SI_COUNT(i32 %35)
  %37 = sext i32 %36 to i64
  %38 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %38, i32 0, i32 1
  store i64 %37, i64* %39, align 8
  %40 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %41 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %40, i32 0, i32 0
  %42 = load i8*, i8** %41, align 8
  %43 = load i32, i32* %7, align 4
  %44 = call i32 @SI_COUNT(i32 %43)
  %45 = sext i32 %44 to i64
  %46 = getelementptr inbounds i8, i8* %42, i64 %45
  %47 = getelementptr inbounds i8, i8* %46, i64 1
  ret i8* %47
}

declare dso_local i32 @vmParseStringEx(i32*, i8 signext, i32) #1

declare dso_local i32 @SI_COUNT(i32) #1

declare dso_local i32 @SI_SETLEN(i32, i32) #1

declare dso_local i32 @strncpy(i8*, i32, i32) #1

declare dso_local i32 @SI_PTR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
